--- a/src/app/scss/_modal-verification-code.scss
+++ b/src/app/scss/_modal-verification-code.scss
@@ -75,7 +75,9 @@
         text-align: center;
         margin: 0px 10px 20px 10px;
         .button {
-            width: 50%;
+            float:left;
+            width: 40%;
+            margin: 5% 5% 0 5%;
             line-height: 5vh;
             margin-top: 5px;
             display: inline-block;
