--- a/src/app/app/basic-call-procedure/components/hc-call-preparation.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-call-preparation.component.html
@@ -2,18 +2,14 @@
     	<div class="item-container">
 	        <div class="container">
 	        	<div class='cell'>
-	        		<div class='container'><div class='cell left'></div></div>
+	        		<div class='container'><div class='cell width-100 align-right padding-right-5 green'>Route #2</div></div>
 			    </div>
-	        	<div class='cell'>
-	        		<div class='container'><div class='cell right green'>Route #2</div></div>
-			    </div>
-			    <div class='cell icon'></div>
 			</div>
 	        <div class="container">
-	        	<div class='cell logo'><div class="profpic pink">R</div></div>
+	        	<div class='cell width-20 padding-left-5'><div class="profpic pink">R</div></div>
 	        	<div class='cell'>
 	        		<div class='container'>
-	        			<div class='cell content title bold green'>Rose Cell</div>
+	        			<div class='cell width-80 padding-left-5 x-large bold green'>Rose Cell</div>
 	        		</div>
 			    </div>
 			</div>
@@ -21,196 +17,196 @@
         <div class="item-container" (click)="subProfileMenuShow()">
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell title single green'>Profile</div></div>
+			        <div class='container'><div class='cell large width-90 padding-left-5 green'>Profile</div></div>
 			    </div>
-			    <div class='cell icon arrow-down' [ngClass]="{selected: vProfileMenuShow}"></div>
+			    <div class='cell width-10 arrow-down' [ngClass]="{selected: vProfileMenuShow}"></div>
 			</div>
 		</div>
 		<div class="item-container sub" *ngIf="vProfileMenuShow">
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Retailer Owner</div></div>
-			        <div class='container'><div class='cell single sub-cell'>Rose May Shu</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Retailer Owner</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>Rose May Shu</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Outlet Type</div></div>
-			        <div class='container'><div class='cell single sub-cell'>Gallery</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Outlet Type</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>Gallery</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Civil Status</div></div>
-			        <div class='container'><div class='cell single sub-cell'>Married</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Civil Status</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>Married</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Email Address</div></div>
-			        <div class='container'><div class='cell single sub-cell'>rose_cell@yahoo.com</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Email Address</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>rose_cell@yahoo.com</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Gender</div></div>
-			        <div class='container'><div class='cell single sub-cell'>Female</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Gender</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>Female</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Birthday</div></div>
-			        <div class='container'><div class='cell single sub-cell'>12 October 2016</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Birthday</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>12 October 2016</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Mobile Number (MIN)</div></div>
-			        <div class='container'><div class='cell single sub-cell'>99999900089</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Mobile Number (MIN)</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>99999900089</div></div>
 			    </div>
-			    <a href="tel:99999900089" class='cell icon call'></a>
+			    <a href="tel:99999900089" class='cell width-10 call'></a>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Address</div></div>
-			        <div class='container'><div class='cell single sub-cell'>Maduluyong 10 Road</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Address</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>Maduluyong 10 Road</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Amount Receivables</div></div>
-			        <div class='container'><div class='cell single sub-cell'>3,000.00 ₱</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Amount Receivables</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>3,000.00 ₱</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Value Segment</div></div>
-			        <div class='container'><div class='cell single sub-cell'>High</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Value Segment</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>High</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Threshold</div></div>
-			        <div class='container'><div class='cell single sub-cell'>1,000.00 ₱ </div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Threshold</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>1,000.00 ₱ </div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container border">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Status</div></div>
-			        <div class='container'><div class='cell single sub-cell'>In Progress</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Status</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>In Progress</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell grey'>Last Visit</div></div>
-			        <div class='container'><div class='cell single sub-cell'>04/12/2016 03.16 PM</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 grey'>Last Visit</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10'>04/12/2016 03.16 PM</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 		</div>
 
         <div class="item-container" (click)="subCollectionMenuShow()">
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell title single green'>Collection</div></div>
+			        <div class='container'><div class='cell large width-90 padding-left-5 green'>Collection</div></div>
 			    </div>
-			    <div class='cell icon arrow-down' [ngClass]="{selected: vCollectionMenuShow}"></div>
+			    <div class='cell width-10 arrow-down' [ngClass]="{selected: vCollectionMenuShow}"></div>
 			</div>
 		</div>
 		<div class="item-container sub" *ngIf="vCollectionMenuShow">
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell left sub-cell'>Date</div></div>
-			        <div class='container'><div class='cell left sub-cell'>04/03/2016</div></div>
-			        <div class='container'><div class='cell left sub-cell'>04/02/2016</div></div>
-			        <div class='container'><div class='cell left sub-cell'>04/01/2016</div></div>
+			        <div class='container'><div class='cell width-50 padding-left-10'>Date</div></div>
+			        <div class='container'><div class='cell width-50 padding-left-10'>04/03/2016</div></div>
+			        <div class='container'><div class='cell width-50 padding-left-10'>04/02/2016</div></div>
+			        <div class='container'><div class='cell width-50 padding-left-10'>04/01/2016</div></div>
 			    </div>
 				<div class='cell'>
-			        <div class='container'><div class='cell right'>Amount</div></div>
-			        <div class='container'><div class='cell right'>800 ₱</div></div>
-			        <div class='container'><div class='cell right'>1,200 ₱</div></div>
-			        <div class='container'><div class='cell right'>400 ₱</div></div>
+			        <div class='container'><div class='cell width-50 align-right'>Amount</div></div>
+			        <div class='container'><div class='cell width-50 align-right'>800 ₱</div></div>
+			        <div class='container'><div class='cell width-50 align-right'>1,200 ₱</div></div>
+			        <div class='container'><div class='cell width-50 align-right'>400 ₱</div></div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 		</div>
 
         <div class="item-container" (click)="subLoadMenuShow()">
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell title single green'>Load Wallet</div></div>
+			        <div class='container'><div class='cell large width-90 padding-left-5 green'>Load Wallet</div></div>
 			    </div>
-			    <div class='cell icon arrow-down' [ngClass]="{selected: vLoadMenuShow}"></div>
+			    <div class='cell width-10 arrow-down' [ngClass]="{selected: vLoadMenuShow}"></div>
 			</div>
 		</div>
 		<div class="item-container sub" *ngIf="vLoadMenuShow">
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell title bold'>SmartLoad</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 large bold'>SmartLoad</div></div>
 			        <div class='container'>
-			        	<div class='cell single sub-cell'>
+			        	<div class='cell width-100 padding-left-10'>
 							<div class="container">
 								<div class='cell'>
-							        <div class='container'><div class='cell left'>Drop Size</div></div>
-							        <div class='container'><div class='cell left'>Last Amount Transferred</div></div>
-							        <div class='container'><div class='cell left'>Transaction Date</div></div>
-							        <div class='container'><div class='cell left'>Latest Balance</div></div>
+							        <div class='container'><div class='cell width-50'>Drop Size</div></div>
+							        <div class='container'><div class='cell width-50'>Last Amount Transferred</div></div>
+							        <div class='container'><div class='cell width-50'>Transaction Date</div></div>
+							        <div class='container'><div class='cell width-50'>Latest Balance</div></div>
 							    </div>
 								<div class='cell'>
-							        <div class='container'><div class='cell right'>350</div></div>
-							        <div class='container'><div class='cell right'>1,200 ₱</div></div>
-							        <div class='container'><div class='cell right'>04/01/2016</div></div>
-							        <div class='container'><div class='cell right'>1,000 ₱</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>350</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>1,200 ₱</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>04/01/2016</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>1,000 ₱</div></div>
 							    </div>
 							</div>
 			        	</div>
 			        </div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 		</div>
 
         <div class="item-container" (click)="subPhysicalMenuShow()">
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell title single green'>Physical Inventory</div></div>
+			        <div class='container'><div class='cell large width-90 padding-left-5 green'>Physical Inventory</div></div>
 			    </div>
-			    <div class='cell icon arrow-down' [ngClass]="{selected: vPhysicalMenuShow}"></div>
+			    <div class='cell width-10 arrow-down' [ngClass]="{selected: vPhysicalMenuShow}"></div>
 			</div>
 		</div>
 		<div class="item-container sub" *ngIf="vPhysicalMenuShow">
 			<div class="container">
 				<div class='cell'>
-			        <div class='container'><div class='cell single sub-cell title bold'>SKU1</div></div>
+			        <div class='container'><div class='cell width-100 padding-left-10 large bold'>SKU1</div></div>
 			        <div class='container'>
-			        	<div class='cell single sub-cell'>
+			        	<div class='cell width-100 padding-left-10'>
 							<div class="container">
 								<div class='cell'>
-							        <div class='container'><div class='cell left'>Last Quantity Sold</div></div>
-							        <div class='container'><div class='cell left'>Transaction Date</div></div>
-							        <div class='container'><div class='cell left'>Beginning Balance</div></div>
+							        <div class='container'><div class='cell width-50'>Last Quantity Sold</div></div>
+							        <div class='container'><div class='cell width-50'>Transaction Date</div></div>
+							        <div class='container'><div class='cell width-50'>Beginning Balance</div></div>
 							    </div>
 								<div class='cell'>
-							        <div class='container'><div class='cell right'>600</div></div>
-							        <div class='container'><div class='cell right'>04/01/2016</div></div>
-							        <div class='container'><div class='cell right'>1,100</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>600</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>04/01/2016</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>1,100</div></div>
 							    </div>
 							</div>
 			        	</div>
 			        </div>
 			    </div>
-			    <div class='cell icon'></div>
+			    <div class='cell width-10'></div>
 			</div>
 		</div>
 
