--- a/src/app/app/close-day/components/collection.component.html
+++ b/src/app/app/close-day/components/collection.component.html
@@ -4,19 +4,19 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell left'>Total Collection</div>
+                	<div class='cell padding-left-5 width-50'>Total Collection</div>
                 </div>
                 <div class='container'>
-                	<div class='cell left italic'>Total collected amount today</div>
+                	<div class='cell padding-left-5 width-50 italic small'>Total collected amount today</div>
                 </div>
 	        </div>
 	        <div class='cell'>
-                <!-- <div class='container'><div class='cell right'></div></div> -->
+                <!-- <div class='container'><div class='cell width-40 align-right'></div></div> -->
                 <div class='container'>
-                	<div class='cell right green'>5,000.00 ₱</div>
+                	<div class='cell width-40 align-right green'>5,000.00 ₱</div>
                 </div>
 	        </div>
-	        <div class='cell icon arrow-right'>
+	        <div class='cell width-10 arrow-right'>
 	        </div>
 	    </div>
 	</div>
@@ -26,19 +26,19 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell left'>Total Remittance</div>
+                	<div class='cell padding-left-5 width-50'>Total Remittance</div>
                 </div>
                 <div class='container'>
-                	<div class='cell left italic'>Total remittance amount today</div>
+                	<div class='cell padding-left-5 width-50 italic small'>Total remittance amount today</div>
                 </div>
 	        </div>
 	        <div class='cell'>
-                <!-- <div class='container'><div class='cell right'></div></div> -->
+                <!-- <div class='container'><div class='cell width-40 align-right'></div></div> -->
                 <div class='container'>
-                	<div class='cell right green'>2,000.00 ₱</div>
+                	<div class='cell width-40 align-right green'>2,000.00 ₱</div>
                 </div>
 	        </div>
-	        <div class='cell icon arrow-right'>
+	        <div class='cell width-10 arrow-right'>
 	        </div>
 	    </div>
 	</div>
@@ -48,19 +48,19 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell left'>Difference</div>
+                	<div class='cell padding-left-5 width-50'>Difference</div>
                 </div>
                 <div class='container'>
-                	<div class='cell left italic'>Collection - Remittance</div>
+                	<div class='cell padding-left-5 width-50 italic small'>Collection - Remittance</div>
                 </div>
 	        </div>
 	        <div class='cell'>
-                <!-- <div class='container'><div class='cell right'></div></div> -->
+                <!-- <div class='container'><div class='cell width-40 align-right'></div></div> -->
                 <div class='container'>
-                	<div class='cell right green'>3,000.00 ₱</div>
+                	<div class='cell width-40 align-right green'>3,000.00 ₱</div>
                 </div>
 	        </div>
-	        <div class='cell icon arrow-right'>
+	        <div class='cell width-10 arrow-right'>
 	        </div>
 	    </div>
 	</div>
@@ -70,19 +70,19 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell left'>Previous A/R</div>
+                	<div class='cell padding-left-5 width-50'>Previous A/R</div>
                 </div>
                 <div class='container'>
-                	<div class='cell left italic'>Total A/R before today</div>
+                	<div class='cell padding-left-5 width-50 italic small'>Total A/R before today</div>
                 </div>
 	        </div>
 	        <div class='cell'>
-                <!-- <div class='container'><div class='cell right'></div></div> -->
+                <!-- <div class='container'><div class='cell width-40 align-right'></div></div> -->
                 <div class='container'>
-                	<div class='cell right green'>10,000.00 ₱</div>
+                	<div class='cell width-40 align-right green'>10,000.00 ₱</div>
                 </div>
 	        </div>
-	        <div class='cell icon arrow-right'>
+	        <div class='cell width-10 arrow-right'>
 	        </div>
 	    </div>
 	</div>
@@ -92,19 +92,19 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell left'>Sales Order</div>
+                	<div class='cell padding-left-5 width-50'>Sales Order</div>
                 </div>
                 <div class='container'>
-                	<div class='cell left italic'>Total order amount today</div>
+                	<div class='cell padding-left-5 width-50 italic small'>Total order amount today</div>
                 </div>
 	        </div>
 	        <div class='cell'>
-                <!-- <div class='container'><div class='cell right'></div></div> -->
+                <!-- <div class='container'><div class='cell width-40 align-right'></div></div> -->
                 <div class='container'>
-                	<div class='cell right green'>2,000.00 ₱</div>
+                	<div class='cell width-40 align-right green'>2,000.00 ₱</div>
                 </div>
 	        </div>
-	        <div class='cell icon arrow-right'>
+	        <div class='cell width-10 arrow-right'>
 	        </div>
 	    </div>
 	</div>
@@ -114,19 +114,19 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell left'>For Collection</div>
+                	<div class='cell padding-left-5 width-50'>For Collection</div>
                 </div>
                 <div class='container'>
-                	<div class='cell left italic'>Current + Previous Collection</div>
+                	<div class='cell padding-left-5 width-50 italic small'>Current + Previous Collection</div>
                 </div>
 	        </div>
 	        <div class='cell'>
-                <!-- <div class='container'><div class='cell right'></div></div> -->
+                <!-- <div class='container'><div class='cell width-40 align-right'></div></div> -->
                 <div class='container'>
-                	<div class='cell right green'>9,000.00 ₱</div>
+                	<div class='cell width-40 align-right green'>9,000.00 ₱</div>
                 </div>
 	        </div>
-	        <div class='cell icon arrow-right'>
+	        <div class='cell width-10 arrow-right'>
 	        </div>
 	    </div>
 	</div>
@@ -136,19 +136,19 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell left'>Total A/R</div>
+                	<div class='cell padding-left-5 width-50'>Total A/R</div>
                 </div>
                 <div class='container'>
-                	<div class='cell left italic'>Previous A/R + Sales Order - For Collection</div>
+                	<div class='cell padding-left-5 width-50 italic small'>Previous A/R + Sales Order - For Collection</div>
                 </div>
 	        </div>
 	        <div class='cell'>
-                <!-- <div class='container'><div class='cell right'></div></div> -->
+                <!-- <div class='container'><div class='cell width-40 align-right'></div></div> -->
                 <div class='container'>
-                	<div class='cell right green'>3,000.00 ₱</div>
+                	<div class='cell width-40 align-right green'>3,000.00 ₱</div>
                 </div>
 	        </div>
-	        <div class='cell icon arrow-right'>
+	        <div class='cell width-10 arrow-right'>
 	        </div>
 	    </div>
 	</div>
