--- a/src/app/app/remittance/components/remittance.component.html
+++ b/src/app/app/remittance/components/remittance.component.html
@@ -2,54 +2,55 @@
     <div class="item-container">
         <div class='container'>
             <div class='cell'>
-                <div class='container'><div class='cell header bold center title'>Total Remittance : 11,400.00 ₱</div></div>
+                <div class='container'><div class='cell bold width-50 padding-left-5 large'>Total Receivables :</div></div>
+            </div>
+            <div class='cell'>
+                <div class='container'><div class='cell bold width-50 padding-right-5 align-right large'>11,400.00 ₱</div></div>
             </div>
         </div>
     </div>
     <div class="item-container">
         <div class="container">
             <div class='cell'>
-                <div class='container' id ="accRetName">
+                <div class='container'>
                     <div class='cell'>
                         <div class="container">
                             <div class='cell'>
-                                <div class='container' id ="accSeq"><div class='cell left'>RemitBD1356</div></div>
+                                <div class='container'><div class='cell width-50 padding-left-5'>RemitBD1356</div></div>
                             </div>
                             <div class='cell'>
-                                <div class='container' id ="accSeq"><div class='cell right'>9,000.00 ₱</div></div>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>9,000.00 ₱</div></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class='container' id ="accSeq"><div class='cell single green'>Bank Deposit</div></div>
-                <div class='container' id ="accSeq"><div class='cell single grey'>Bank BCA / Cibinong</div></div>
-                <div class='container' id ="accSeq"><div class='cell single grey'>110.220.330.440</div></div>
-                <div class='container' id ="accSeq"><div class='cell single grey'>17/04/2016</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 green'>Bank Deposit</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 grey'>Bank BCA / Cibinong</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 grey'>110.220.330.440</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 grey'>17/04/2016</div></div>
             </div>
-                <div class='cell icon'></div>
         </div>
     </div>
     <div class="item-container">
         <div class="container">
             <div class='cell'>
-                <div class='container' id ="accRetName">
+                <div class='container'>
                     <div class='cell'>
                         <div class="container">
                             <div class='cell'>
-                                <div class='container' id ="accSeq"><div class='cell left'>RemitBD1390</div></div>
+                                <div class='container'><div class='cell width-50 padding-left-5'>RemitBD1390</div></div>
                             </div>
                             <div class='cell'>
-                                <div class='container' id ="accSeq"><div class='cell right'>2,400.00 ₱</div></div>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>2,400.00 ₱</div></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class='container' id ="accSeq"><div class='cell single green'>Bank Deposit</div></div>
-                <div class='container' id ="accSeq"><div class='cell single grey'>Bank BCA / Cibinong</div></div>
-                <div class='container' id ="accSeq"><div class='cell single grey'>110.220.330.440</div></div>
-                <div class='container' id ="accSeq"><div class='cell single grey'>05/05/2016</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 green'>Bank Deposit</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 grey'>Bank BCA / Cibinong</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 grey'>110.220.330.440</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 grey'>05/05/2016</div></div>
             </div>
-                <div class='cell icon'></div>
         </div>
     </div>
     <div class="no-divider">
