--- a/src/app/app/basic-call-procedure/components/hc-bcp-activity-step.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-bcp-activity-step.component.html
@@ -16,7 +16,18 @@
     <div class="step-container">
         <div class="step">
             <div class="left">
-                <div class='circle' [ngClass]="{'circle-green': vCollectionFlag}">1</div>
+                <div class='circle' [ngClass]="{'circle-green': vCallPrepFlag}">1</div>
+                <div class="line" [ngClass]="{'line-green': vCallPrepFlag}"></div>
+            </div>
+            <div class="right">
+                <div class="title">Call Preparation</div>
+                <div class="body" *ngIf="vCallPrepFlag">10:00 - 13:00</div>
+            </div>
+        </div>
+
+        <div class="step">
+            <div class="left">
+                <div class='circle' [ngClass]="{'circle-green': vCollectionFlag}">2</div>
                 <div class="line" [ngClass]="{'line-green': vCollectionFlag}"></div>
             </div>
             <div class="right">
@@ -27,7 +38,7 @@
 
         <div class="step">
             <div class="left">
-                <div class='circle' [ngClass]="{'circle-green': vOffersFlag}">2</div>
+                <div class='circle' [ngClass]="{'circle-green': vOffersFlag}">3</div>
                 <div class="line" [ngClass]="{'line-green': vOffersFlag}"></div>
             </div>
             <div class="right">
@@ -38,11 +49,22 @@
 
         <div class="step">
             <div class="left">
-                <div class='circle' [ngClass]="{'circle-green': vSalesFlag}">3</div>
+                <div class='circle' [ngClass]="{'circle-green': vSalesFlag}">4</div>
+                <div class="line" [ngClass]="{'line-green': vSalesFlag}"></div>
             </div>
             <div class="right">
                 <div class="title">Sales Order</div>
                 <div class="body" *ngIf="vSalesFlag">10:00 - 13:00</div>
+            </div>
+        </div>
+
+        <div class="step">
+            <div class="left">
+                <div class='circle' [ngClass]="{'circle-green': vUnservedFlag}">5</div>
+            </div>
+            <div class="right">
+                <div class="title">Unserved Order</div>
+                <div class="body" *ngIf="vUnservedFlag">10:00 - 13:00</div>
             </div>
         </div>
   </div>
