--- a/src/app/app/close-day/components/visited-retail.component.html
+++ b/src/app/app/close-day/components/visited-retail.component.html
@@ -3,110 +3,109 @@
 
 	<div class="item-container">
 		<div class="container">
-			<div class='cell left title black'>Retailers Visited</div>
+			<div class='cell width-100 padding-left-5 large'>Retailers Visited</div>
 		</div>
 		<div class="container">
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell left grey'>Route Visited</div>
+					<div class='cell width-60 padding-left-5 grey'>Route Visited</div>
 				</div>
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell right green '>2 of 3</div>
+					<div class='cell width-30 align-right green '>2 of 3</div>
 				</div>
 			</div>
-			<div class='cell icon'></div>
-		</div>
-
-		<div class="container">
-			<div class='cell'>
-				<div class='container'>
-					<div class='cell left grey'>Route not Visited</div>
-				</div>
-			</div>
-			<div class='cell'>
-				<div class='container'>
-					<div class='cell right green'>1</div>
-				</div>
-			</div>
-			<div class='cell icon'></div>
+			<div class='cell width-10'></div>
 		</div>
 
 		<div class="container">
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell left grey'>Percentage</div>
+					<div class='cell width-60 padding-left-5 grey'>Route not Visited</div>
 				</div>
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell right green'>67%</div>
+					<div class='cell width-30 align-right green'>1</div>
 				</div>
 			</div>
-			<div class='cell icon'></div>
+			<div class='cell width-10'></div>
+		</div>
+
+		<div class="container">
+			<div class='cell'>
+				<div class='container'>
+					<div class='cell width-60 padding-left-5 grey'>Percentage</div>
+				</div>
+			</div>
+			<div class='cell'>
+				<div class='container'>
+					<div class='cell width-30 align-right green'>67%</div>
+				</div>
+			</div>
+			<div class='cell width-10'></div>
 		</div>
 	</div>
 
 	<div class="item-container">
 		<div class="container">
-			<div class='cell left title black'>Productive Calls</div>
+			<div class='cell width-100 padding-left-5 large'>Productive Calls</div>
 		</div>
 		<div class="container">
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell left grey'>Productive Calls</div>
+					<div class='cell width-60 padding-left-5 grey'>Productive Calls</div>
 				</div>
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell right green'>1</div>
+					<div class='cell width-30 align-right green'>1</div>
 				</div>
 			</div>
-			<div class='cell icon'></div>
-		</div>
-
-		<div class="container">
-			<div class='cell'>
-				<div class='container'>
-					<div class='cell left grey'>Not Productive Calls</div>
-				</div>
-			</div>
-			<div class='cell'>
-				<div class='container'>
-					<div class='cell right green'>1</div>
-				</div>
-			</div>
-			<div class='cell icon'></div>
+			<div class='cell width-10'></div>
 		</div>
 
 		<div class="container">
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell left grey'>Percentage</div>
+					<div class='cell width-60 padding-left-5 grey'>Not Productive Calls</div>
 				</div>
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell right green'>50%</div>
+					<div class='cell width-30 align-right green'>1</div>
 				</div>
 			</div>
-			<div class='cell icon'></div>
+			<div class='cell width-10'></div>
+		</div>
+
+		<div class="container">
+			<div class='cell'>
+				<div class='container'>
+					<div class='cell width-60 padding-left-5 grey'>Percentage</div>
+				</div>
+			</div>
+			<div class='cell'>
+				<div class='container'>
+					<div class='cell width-30 align-right green'>50%</div>
+				</div>
+			</div>
+			<div class='cell width-10'></div>
 		</div>
 	</div>
 
 	<div class="item-container" (click)="detailShow()" id="retailer-sub-menu-btn">
-            <div class="container">
-                <div class='cell'>
-                    <div class='container'><div class='cell single title black'>View Details</div></div>
-                </div>
-               	<div class='cell icon arrow-down' [ngClass]="{selected: vDetailShow}"></div>
+        <div class="container">
+            <div class='cell'>
+                <div class='container'><div class='cell width-90 padding-left-5 large'>View Details</div></div>
             </div>
+           	<div class='cell width-10 arrow-down' [ngClass]="{selected: vDetailShow}"></div>
+        </div>
     </div>
 
-    <div class="item-container-sub-full" *ngIf="vDetailShow">
-		
-    	<div class="item-container">
+    <div *ngIf="vDetailShow">
+    	<div class="item-container sub">
 	    	<div class="container">
 				<div class='cell'>
 					<div class='container'>
@@ -131,7 +130,7 @@
 			</div>
 		</div>
 
-		<div class="item-container">
+		<div class="item-container sub">
 			<div class="container">
 				<div class='cell'>
 					<div class='container'>
@@ -156,7 +155,7 @@
 			</div>
 		</div>
 
-		<div class="item-container">
+		<div class="item-container sub">
 			<div class="container">
 				<div class='cell'>
 					<div class='container'>
@@ -180,8 +179,5 @@
 				</div>
 			</div>
 		</div>
-
     </div>
-
-    
 </div>
