--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -55,15 +55,15 @@
 				<div class="container">
 					<div class='cell width-10 inventory-load'></div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-80 padding-left-3 bold' [ngClass]="{title: vSubLoadMenuShow[i]}">Smartload</div></div>
+				        <div class='container'><div class='cell width-80 padding-left-5 bold' [ngClass]="{title: vSubLoadMenuShow[i]}">Smartload</div></div>
 				        <div class='container' *ngIf="!vSubLoadMenuShow[i]">
 				        	<div class='cell'>
 				        		<div class="container">
 									<div class='cell'>
-								        <div class='container'><div class='cell width-40 padding-left-3'>Ending Balance</div></div>
+								        <div class='container'><div class='cell width-40 padding-left-5'>Ending Balance</div></div>
 								    </div>
 									<div class='cell'>
-								        <div class='container'><div class='cell width-40 padding-right-3 align-right bold'>700</div></div>
+								        <div class='container'><div class='cell width-40 align-right bold'>700</div></div>
 								    </div>
 								</div>
 							</div>
@@ -76,20 +76,20 @@
 			<div class="item-container sub" *ngIf="vSubLoadMenuShow[i]">
 				<div class="container">
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Total Inventory</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-6'>Beginning Balance</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-6'>Delivery</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Sales</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-6'>Sold</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Total Inventory</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>Beginning Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>Delivery</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Sales</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>Sold</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>600</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>100</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>700</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>600</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>700</div></div>
 				    </div>
 				    <div class='cell width-10'></div>
 				</div>
@@ -103,15 +103,15 @@
 				<div class="container">
 					<div class='cell width-10 inventory-physical'></div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-80 padding-left-3 bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">SKU1</div></div>
+				        <div class='container'><div class='cell width-80 padding-left-5 bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">SKU1</div></div>
 				        <div class='container' *ngIf="!vSubPhysicalMenuShow[i]">
 				        	<div class='cell'>
 				        		<div class="container">
 									<div class='cell'>
-								        <div class='container'><div class='cell width-40 padding-left-3'>Ending Balance</div></div>
+								        <div class='container'><div class='cell width-40 padding-left-5'>Ending Balance</div></div>
 								    </div>
 									<div class='cell'>
-								        <div class='container'><div class='cell width-40 padding-right-3 align-right bold'>1,300</div></div>
+								        <div class='container'><div class='cell width-40 align-right bold'>1,300</div></div>
 								    </div>
 								</div>
 							</div>
@@ -123,22 +123,22 @@
 			<div class="item-container sub" *ngIf="vSubPhysicalMenuShow[i]">
 				<div class="container">
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Total Inventory</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-6'>Beginning Balance</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-6'>New Delivery</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Sales &amp; Transfer Back</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-6'>Sold</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-6'>Transfer Back</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Total Inventory</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>Beginning Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>New Delivery</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Sales &amp; Transfer Back</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>Sold</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>Transfer Back</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>1,500</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>1,500</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>0</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>200</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>1,300</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>1,500</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>1,500</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>0</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>200</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>1,300</div></div>
 				    </div>
 				    <div class='cell width-10'></div>
 				</div>
@@ -149,12 +149,12 @@
 			<div class="item-container" (click)="subPhysicalMenuShow(i)">
 				<div class="container">
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">{{vProduct.productName}}</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 grey' *ngIf="!vSubPhysicalMenuShow[i]">Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">{{vProduct.productName}}</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 grey' *ngIf="!vSubPhysicalMenuShow[i]">Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'></div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold' *ngIf="!vSubPhysicalMenuShow[i]">{{vProduct.endingBalance}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right'></div></div>
+				        <div class='container'><div class='cell width-45 align-right bold' *ngIf="!vSubPhysicalMenuShow[i]">{{vProduct.endingBalance}}</div></div>
 				    </div>
 				    <div class='cell width-10 arrow-down' [ngClass]="{selected: vSubPhysicalMenuShow[i]}"></div>
 				</div>
@@ -163,19 +163,19 @@
 			<div class="item-container sub" *ngIf="vSubPhysicalMenuShow[i]">
 				<div class="container">
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Total Inventory</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 sub-cell'>Beginning Balance</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 sub-cell'>Delivery</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Sales</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-3 sub-cell'>Sold</div></div>				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Total Inventory</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 sub-cell'>Beginning Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 sub-cell'>Delivery</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Sales</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 sub-cell'>Sold</div></div>				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>600</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>{{vProduct.beginningBalance}}</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>{{vProduct.newDelivery}}</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>100</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>{{vProduct.sold}}</div></div>
-				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>{{vProduct.endingBalance}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>600</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{vProduct.beginningBalance}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{vProduct.newDelivery}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{vProduct.sold}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>{{vProduct.endingBalance}}</div></div>
 				    </div>
 				    <div class='cell width-10'></div>
 				</div>
