--- a/src/app/app/stock-return/components/stock-return.component.html
+++ b/src/app/app/stock-return/components/stock-return.component.html
@@ -1,31 +1,59 @@
-<div class="stock-return">
-	<div class="item-container">
-		<div><b>SKU1</b></div>
-		<div class="container">
-			<div class="cell left">Ending Balance</div>
-			<div class="cell">1,300</div>
-		</div>
-		<div class="container">	
-			<div class="cell left">Amount Return</div>
-			<div class="cell">
-					<div class="container"><div class="cell right"> <input id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/> </div></div>
-			</div>
-		</div>	
-	</div>
-	<div class="item-container">
-		<div><b>SKU2</b></div>
-		<div class="container">
-			<div class="cell left">Ending Balance</div>
-			<div class="cell">900</div>
-		</div>
-		<div class="container">	
-			<div class="cell left">Amount Return</div>
-			<div class="cell">
-					<div class="container"><div class="cell right"> <input id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/> </div></div>
-			</div>
-		</div>	
-	</div>
 
+
+<div class="container-body">
+    <div class="item-container">
+        <div class='container'>
+            <div class='cell'>
+                <div class='container'><div class='cell width-100 padding-left-5'>SKU1</div></div>
+                <div class='container'>
+                	<div class='cell width-100'>
+		                <div class='container'>
+		                    <div class='cell'>
+		                        <div class="container">
+		                            <div class='cell'>
+		                                <div class='container'><div class='cell width-50 padding-left-5'>Ending Balance</div></div>
+		                                <div class='container'><div class='cell width-50 padding-left-5'>Amount Return</div></div>
+		                            </div>
+		                            <div class='cell'>
+		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>1,300</div></div>
+		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-30" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/></div></div>
+		                            </div>
+		                        </div>
+		                    </div>
+		                </div>
+		            </div>
+		        </div>
+            </div>
+        </div>
+    </div>
+    <div class="item-container">
+        <div class='container'>
+            <div class='cell'>
+                <div class='container'><div class='cell width-100 padding-left-5'>SKU2</div></div>
+                <div class='container'>
+                	<div class='cell width-100'>
+		                <div class='container'>
+		                    <div class='cell'>
+		                        <div class="container">
+		                            <div class='cell'>
+		                                <div class='container'><div class='cell width-50 padding-left-5'>Ending Balance</div></div>
+		                                <div class='container'><div class='cell width-50 padding-left-5'>Amount Return</div></div>
+		                            </div>
+		                            <div class='cell'>
+		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>900</div></div>
+		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-30" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/></div></div>
+		                            </div>
+		                        </div>
+		                    </div>
+		                </div>
+		            </div>
+		        </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="stock-return">
 	<div class="item-container1">
 		<div class="container">Acknowledgement</div>
 		<div class="long-textfield"><input id="code" type="password"/></div>
